--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="#">Project name</a>
+                    <a class="brand" href="#">The Master Videographer</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="#">Home</a></li>
@@ -69,37 +69,34 @@
         </div>
 
         <div class="container">
-
-            <!-- Main hero unit for a primary marketing message or call to action -->
-            <div class="hero-unit">
-                <h1>Hello, world!</h1>
-                <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-            </div>
-
             <!-- Example row of columns -->
-            <div class="row">
-                <div class="span4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
+            <div class="row clearfix">
+                <div class="span4" id="snapshot">
+                    <h1 id="archetypeTitle">Archetype: The Master Videographer</h1>
+                    <img class="profile" src="img/eduardo.jpg">
+                    <h2>Eduardo Excellente</h2>
+                    <h3>Category</h3>
+                    <p>Cinematic Grade</p>
+                    <h3>Age</h3>
+                    <p>35-60</p>
+                    <h3>Goals</h3>
+                    <p>To see and experience the human condition. To maintain or become an icon in the industry - an standard of excellence that others can be measured by.</p>
+                    <h3>Experience</h3>
+                    <p>Decades of production, direction, and business experience. Eduardo has cornered a niche style and used innnovative methods to define it.</p>
+                    <h3>Pain Points</h3>
+                    <p>Looking for new tools that are robust, reliable, and flexible to achieve new and pioneering shots. Largely pain points will come from the limitations of the technology used, but often come from the complexity of the scene at hand.</p>
                 </div>
-                <div class="span4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                <div class="span8" id="overview">
+                    <h2>Leading Statement</h2>
+                    <p id="leadin">"I’m an established pioneer and love to experiment with new tools. My craft, passion, and style define me."</p>
+                    <p></p>
                </div>
-                <div class="span4">
-                    <h2>Heading</h2>
-                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
-                </div>
             </div>
 
             <hr>
 
             <footer>
-                <p>&copy; Company 2012</p>
+                <p>&copy; CandyCam Multimedia Robotics 2012</p>
             </footer>
 
         </div> <!-- /container -->
