Added mo' content.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,20 @@
                 <div class="span8" id="overview">
                     <h2>Leading Statement</h2>
                     <p id="leadin">"I’m an established pioneer and love to experiment with new tools. My craft, passion, and style define me."</p>
-                    <p></p>
+                    <p>Etiam sapien sapien, vehicula a facilisis venenatis, elementum ultricies leo. Praesent blandit, elit non pharetra euismod, ligula orci fermentum nulla, vitae feugiat libero odio sit amet libero. Mauris accumsan hendrerit dignissim. Phasellus congue fringilla nunc vel varius. Aenean urna leo, tristique ut sodales eu, accumsan a nisi. Suspendisse fringilla rutrum molestie. Vivamus vel eros augue. Proin sollicitudin nibh non lectus sodales vehicula. Vivamus arcu elit, consequat id interdum ac, venenatis rhoncus purus. Cras ac sem nibh, et gravida justo. Phasellus malesuada suscipit dui in consectetur. Duis et mi porttitor ante egestas facilisis at ac nisl. Curabitur rutrum ipsum vitae arcu rutrum vitae elementum orci semper. Duis purus augue, tristique vel mollis eget, lobortis eget arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <h2>Personality Traits</h2>
+                    <h2>Knowledge</h2>
+                    <p>General Technology</p>
+                    <p>Industry Complexity</p>
+                    <p>Industry Tools</p>
+                    <h2>Decision Making</h2>
+                    <p>Determining Quality</p>
+                    <p>Determining Efficiency</p>
+                    <p>Determining Overall Value</p>
+                    <h2>Purchasing Habits</h2>
+                    <h2>Engagement Methods</h2>
+                    <h2>Influencers</h2>
+                    <h2>Activities and Interests</h2>
                </div>
             </div>
 
