--- a/index.html
+++ b/index.html
@@ -92,13 +92,19 @@
                     <p>Etiam sapien sapien, vehicula a facilisis venenatis, elementum ultricies leo. Praesent blandit, elit non pharetra euismod, ligula orci fermentum nulla, vitae feugiat libero odio sit amet libero. Mauris accumsan hendrerit dignissim. Phasellus congue fringilla nunc vel varius. Aenean urna leo, tristique ut sodales eu, accumsan a nisi. Suspendisse fringilla rutrum molestie. Vivamus vel eros augue. Proin sollicitudin nibh non lectus sodales vehicula. Vivamus arcu elit, consequat id interdum ac, venenatis rhoncus purus. Cras ac sem nibh, et gravida justo. Phasellus malesuada suscipit dui in consectetur. Duis et mi porttitor ante egestas facilisis at ac nisl. Curabitur rutrum ipsum vitae arcu rutrum vitae elementum orci semper. Duis purus augue, tristique vel mollis eget, lobortis eget arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                     <h2>Personality Traits</h2>
                     <h2>Knowledge</h2>
-                    <p>General Technology</p>
-                    <p>Industry Complexity</p>
-                    <p>Industry Tools</p>
+                    <span class="graphcat">General Technology</span>
+                    <span class="graphbar general_technology"></span>
+                    <span class="graphcat">Industry Complexity</span>
+                    <span class="graphbar industry_complexity"></span>
+                    <span class="graphcat">Industry Tools</span>
+                    <span class="graphbar industry_tools"></span>
                     <h2>Decision Making</h2>
-                    <p>Determining Quality</p>
-                    <p>Determining Efficiency</p>
-                    <p>Determining Overall Value</p>
+                    <span class="graphcat">Determining Quality</span>
+                    <span class="graphbar quality_quality"></span>
+                    <span class="graphcat">Determining Efficiency</span>
+                    <span class="graphbar determining_quality"></span>
+                    <span class="graphcat">Determining Overall Value</span>
+                    <span class="graphbar determining_overall_value"></span>
                     <h2>Purchasing Habits</h2>
                     <h2>Engagement Methods</h2>
                     <h2>Influencers</h2>
